--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -69,7 +69,7 @@
 
 ნერონის დროს ხაზინა ისევე მალე დაცარიელდა, როგორც ეს კალიგულას დროს მოხდა და მან იგივე ხერხებს მიმართა მის შესავსებად. ამას რა თქმა უნდა სენატორებში დიდი უკმაყოფილება მოყვა. [[65]] წელს სენატორებმა სცადეს შეთქმულების მოწყობა, მაგრამ ამის შესახებ იმპერატორმა შეიტყო და შეთქმულები სასტიკად დასაჯა.
 
-ამ მოვლენების შემდეგ ნერონი საბერძნეთში გაემგზავრა, სადაც იგი საჯაროდ გამოდიოდა სცენაზე როგორც მსახიობი და მომღერალი. ბერძნები კი პირფერობდნენ როგორც შეეძლოთ და ყოველგვარ შეჯიბრებში აჯილდოვებდნენ მას. ამისთვის ნერონმა ბერძნული ქალაქები მთელი რიგი ნალოგებისგან გაათავისუფლა. ამასთან ერთად ნერონმა რომში დაიწყო მდიდრული სასახლის მშენებლობა, რომელსაც "ოქროს სახლი" უწოდა. ამან ყველაფერმა რომაელებში აღშფოთება გამოიწვია, ხოლო სენატმა იმპერატორთან ურთიერთობა გაწყვიტა. [[66]] წელს ნერონმა მეორე ცოლიც მოაკვლევინა და მესამედ დაქორწინდა. უკმაყოფილებას იწვევდა პართიასთან გაჭიანურებული ომიც, რომელშიც რომაელებმა საგრძნობელ წარმატებებს ვერ მიაღწიეს. [[63]] წელს ნერონმა მაინც მოახერხა პართიელებთან კომპრომისული სამშვიდობო ხელშეკრულების დადება. [[66]] წელს [[იუდეა|იუდეაში]] დაიწყო [[იუდეის ომი|აჯანყება]]. მათ წინააღმდეგ ნერონმა გაგზავნა ლეგიონი ცესტიუს გალუსის მხედართმთავრობით, მაგრამ იუდეველებმა იგი სასტიკად დაამარცხეს. ნერონს ეშინოდა იუდეველთა წინააღმდეგ გავლენიანი მხედართმთავრის გაგზავნა, რადგან ლეგიონებზე დაყრდნობით მხედართმავარს შეეძლო გადატრიალების მოწყობა, ამიტომ მისი არჩევანი [[ვერპასიან ფლავიუსი|ვერპასიან ფლავიუსზე]] გაჩერდა, რომელიც არც წარჩინებული წარმომავლობის იყო და არც გავლენა ჰქონდა.
+ამ მოვლენების შემდეგ ნერონი საბერძნეთში გაემგზავრა, სადაც იგი საჯაროდ გამოდიოდა სცენაზე როგორც მსახიობი და მომღერალი. ბერძნები კი პირფერობდნენ როგორც შეეძლოთ და ყოველგვარ შეჯიბრებში აჯილდოვებდნენ მას. ამისთვის ნერონმა ბერძნული ქალაქები მთელი რიგი გადასახადებისგან გაათავისუფლა. ამასთან ერთად ნერონმა რომში დაიწყო მდიდრული სასახლის მშენებლობა, რომელსაც "ოქროს სახლი" უწოდა. ამან ყველაფერმა რომაელებში აღშფოთება გამოიწვია, ხოლო სენატმა იმპერატორთან ურთიერთობა გაწყვიტა. [[66]] წელს ნერონმა მეორე ცოლიც მოაკვლევინა და მესამედ დაქორწინდა. უკმაყოფილებას იწვევდა პართიასთან გაჭიანურებული ომიც, რომელშიც რომაელებმა საგრძნობელ წარმატებებს ვერ მიაღწიეს. [[63]] წელს ნერონმა მაინც მოახერხა პართიელებთან კომპრომისული სამშვიდობო ხელშეკრულების დადება. [[66]] წელს [[იუდეა|იუდეაში]] დაიწყო [[იუდეის ომი|აჯანყება]]. მათ წინააღმდეგ ნერონმა გაგზავნა ლეგიონი ცესტიუს გალუსის მხედართმთავრობით, მაგრამ იუდეველებმა იგი სასტიკად დაამარცხეს. ნერონს ეშინოდა იუდეველთა წინააღმდეგ გავლენიანი მხედართმთავრის გაგზავნა, რადგან ლეგიონებზე დაყრდნობით მხედართმავარს შეეძლო გადატრიალების მოწყობა, ამიტომ მისი არჩევანი [[ვერპასიან ფლავიუსი|ვერპასიან ფლავიუსზე]] გაჩერდა, რომელიც არც წარჩინებული წარმომავლობის იყო და არც გავლენა ჰქონდა.
 
 [[68]] წელს ნერონი დაბრუნდა რომში, მაგრამ სიტუაცია კონტროლიდან საბოლოოდ გამოვიდა. აჯანყდნენ ლეგიონები გალიაში, მალე მათ ესპანური ლეგიონებიც შეუერთდნენ. რომის იმპერიას ჩამოშორდა ბრიტანეთი, იუდეაში სიტუაციას რომაელები უკვე აღარ ფლობდნენ. ქვეყნის ეკონომიკური მდგომარეობაც ძალიან ცუდი იყო. ესპანეთში აჯანყებულმა ლეგიონებმა იმპერატორად [[გალბა]] აღიარეს. ნერონს ამ სიტუაციის უკვე ძალიან შეეშინდა და ეგვიპტეში გაქცევა დააპირა, როდესაც პრეტორიანელებმა შეიტყვეს ამის შესახებ, ისინიც აუჯანყდნენ იმპერატორს. ყველასგან მიტოვებულმა, ნერომნა თავი მოიკლა. ასე დასრულდა იულიუს-კლავდიუსების მმართველობა რომში.
 
