/* ვესპასიანი და ტიტუსი */

--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -85,21 +85,21 @@
 ===ვესპასიანი და ტიტუსი===
 [[სურათი:Vespasian-coin.jpg|thumb|ვერსპასიანის გამოსახულება მონეტაზე]]
 
-ვერსპასიანი აღიარეს როგორც სენატორებმა, ასევე ლეგიონერებმაც. მაგრამ იმპერიაში მშვიდობა ჯერ არ სუფევდა. იუდეაში აჯანყება გრძელდებოდა, აჯანყდა ასევე გალიაც და ქვემო გერმანიაც. [[70]] წელს, როდესაც იტალიაში სამოქალაქო ომი დასრულდა, რომის ლეგიონებმა ვერპასიანის ვაჟის, [[ფლავიუსი, ტიტუს|ტიტუსის]] მეთაურობით აიღეს [[იერუსალიმი]] და დაანგრიეს ტაძარი. აჯანყება არნახული სისასტიკით ჩაახშვეს. იერუსალიმი მიწასთან გაასწორეს, ხოლო მოსახლეობა მონებად გაყიდეს. იუდეამ ამ დღიდან არსებობა შეწყვიტა. პოვსტანცების ბრძოლა კი კიდევ 3 წლის მანძილზე გრძელდებოდა.
+ვესპასიანე აღიარეს როგორც სენატორებმა, ასევე ლეგიონერებმაც. მაგრამ იმპერიაში მშვიდობა ჯერ არ სუფევდა. იუდეაში აჯანყება გრძელდებოდა, აჯანყდა ასევე გალიაც და ქვემო გერმანიაც. [[70]] წელს, როდესაც იტალიაში სამოქალაქო ომი დასრულდა, რომის ლეგიონებმა ვესპასიანეს ვაჟის, [[ფლავიუსი, ტიტუს|ტიტუსის]] მეთაურობით აიღეს [[იერუსალიმი]] და დაანგრიეს ტაძარი. აჯანყება არნახული სისასტიკით ჩაახშვეს. იერუსალიმი მიწასთან გაასწორეს, ხოლო მოსახლეობა მონებად გაყიდეს. იუდეამ ამ დღიდან არსებობა შეწყვიტა. აჯანყებულების ბრძოლა კი კიდევ 3 წლის მანძილზე გრძელდებოდა.
 
 გალიაში კი აჯანყებულებს სურდათ გალიის ცალკე იმპერიად ჩამოყალიბება. აჯანყებულთა ნაწილს სურდათ რომთან ღია ომი, მაგრამ გალურმა არისტოკრატიამ მათ არ დაუჭირა მხარი. რომაელებმა აქაც ჩაახშვეს აჯანყება, მაგრამ რეპრესიები არ ჩაუტარებიათ. რომაელი მხედართმთავარი [[პეტილიუს ცერეალისი]] გამოვიდა გალების წინაშე და წარმოთქვა სიტყვა, რომელშიც იგი გალებს არწმუნებდა რომ რომაელები მათი მტრები არ არიან და მათ იმპერია იმდენათვე ეკუთვნით როგორც რომაელებს. ამგვარად გალიაშიც მშვიდობა დამყარდა.
 
-სენატს და ვესპასიანს შორის თავიდანვე კარგი ურთიერთობა დამყარდა. სენატმა იმპერატორს იმხელა ძალაუფლება მიანიჭა რაც აცერთ მის წინამორბედს არ ჰქონდა, მას შეეძლო უკვე არსებული კანონების გაუქმება. ამის გარდა ვესპასიანი ყოველ წელს ირჩეოდა კონსულად. ფლავიუსების ტახტზე ასვლიდან დაიწყო იმპერიის ოქროს ხანა.
+სენატს და ვესპასიანეს შორის თავიდანვე კარგი ურთიერთობა დამყარდა. სენატმა იმპერატორს იმხელა ძალაუფლება მიანიჭა რაც არცერთ მის წინამორბედს არ ჰქონდა, მას შეეძლო უკვე არსებული კანონების გაუქმება. ამის გარდა ვესპასიანე ყოველ წელს ირჩეოდა კონსულად. ფლავიუსების ტახტზე ასვლიდან დაიწყო იმპერიის ოქროს ხანა.
 
 [[სურათი:Coliseorek.jpg|thumb|left|კოლიზეუმის რეკონსტრუქცია]]
 
 [[სურათი:Coliseodges.GIF|thumb|კოლიზეუმი დღეს]]
-ვესპასიანის მმართველოვის პერიოდში მოხდა პროვინციების რომანიზაცია. სენატორები ახლა არა მარტო რომაული წარმოშვების იყვნენ, არამედ პროვინციული არისტოკრატებიც. მეორე მხრივ ამან ლათინების გათქვეფა და მომდევნო გადაშენება გამოიწვია. ბევრ ესპანურ და გალურ ქალაქებს მან ლათინური და რომაული მოქალაქეობა უბოძა. ვესპასიანმა გააუქმა ყველა ის პრივილეგია რაც ნერონმა უბოძა ბერძნულ ქალაქებს. მან ასევე შეუერთა იმპერიას როდოსი, კილია, ბიზანტიუმი, სამოსი, კილიკია და კომაგენა. 
+ვესპასიანის მმართველობის პერიოდში მოხდა პროვინციების რომანიზაცია. სენატორები ახლა არა მარტო რომაული წარმოშობის იყვნენ, არამედ პროვინციული არისტოკრატებიც. მეორე მხრივ ამან ლათინების გათქვეფა და მომდევნო გადაშენება გამოიწვია. ბევრ ესპანურ და გალურ ქალაქებს მან ლათინური და რომაული მოქალაქეობა უბოძა. ვესპასინემ გააუქმა ყველა ის პრივილეგია რაც ნერონმა უბოძა ბერძნულ ქალაქებს. მან ასევე შეუერთა იმპერიას როდოსი, კილია, ბიზანტიუმი, სამოსი, კილიკია და კომაგენა. 
 
-რომში მან დაიწყო [[კოლიზეუმი|კოლიზეუმის]] მშენებლობა და აღადგინა კაპიტოლიუმი. მან შეძლო იმპერიის ეკონომიკის აღორძინება, საზღვრების გამაგრება და პართიასთან მშვიდობის შენარჩუნება. ვესპასიანი [[79]] წელს გარდაიცვალა.
+რომში მან დაიწყო [[კოლიზეუმი|კოლიზეუმის]] მშენებლობა და აღადგინა კაპიტოლიუმი. მან შეძლო იმპერიის ეკონომიკის აღორძინება, საზღვრების გამაგრება და პართიასთან მშვიდობის შენარჩუნება. ვესპასიანე [[79]] წელს გარდაიცვალა.
 
 [[სურათი:Titus bust.jpg|thumb|left|ტიტუსი]]
-ვერპასიანის გარდაცვალების შემდეგ, იმპერატორი მისი უფროსი ვაჟი ტიტუსი გახდა. მას თანამედროვენი ძალიან დადებითად ახასიათებდნენ, მაგრამ მისი მმართველობა მხოლოდ ორი წელი გაგრძელდა, რადგან [[81]] წელს იგი გარდაიცვალა. მისი მმართველობის დროს მოხდა საშინელი კატასტროფა, ვულკანმა ვეზუვიმ ამოხეთქა და გაანადგურა ქალაქები პომპეუსი, გერკულანუმი და სტაბიუმი.
+ვესპასიანეს გარდაცვალების შემდეგ, იმპერატორი მისი უფროსი ვაჟი ტიტუსი გახდა. მას თანამედროვენი ძალიან დადებითად ახასიათებდნენ, მაგრამ მისი მმართველობა მხოლოდ ორი წელი გაგრძელდა, რადგან [[81]] წელს იგი გარდაიცვალა. მისი მმართველობის დროს მოხდა საშინელი კატასტროფა, ვულკანმა ვეზუვიმ ამოხეთქა და გაანადგურა ქალაქები პომპეუსი, ჰერკულანუმი და სტაბიუმი.
 
 ===დომიციანი===
 [[სურათი:Domi6.JPG|thumb|დომიციანი]]
