/* ძვ. წ. IV საუკუნე */

--- a/რომის_რესპუბლიკის_კონსულების_სია.mw
+++ b/რომის_რესპუბლიკის_კონსულების_სია.mw
@@ -206,41 +206,41 @@
 
 ==ძვ. წ. IV საუკუნე==
 
-*[[ძვ. წ. 394|394]] ('''346 A.V.C.''') - კამილუსის პირველი დიქტატურა
+*[[ძვ. წ. 394|394]] ('''360 A.V.C.''') - კამილუსის პირველი დიქტატურა
 
-*[[ძვ. წ. 393|393]] ('''347 A.V.C.''') - ლ. ვალერიუს ლ.ფ. პოტიტუსი, პ.? (ან სერ.) კორნელიუს მალუგინენსისი, ლ. ლუკრეციუს ტრიციპიტინუს ფლავიუსი, სერვიუს სულპიციუს ქ. ფ. კამერინუსი
+*[[ძვ. წ. 393|393]] ('''361 A.V.C.''') - ლ. ვალერიუს ლ.ფ. პოტიტუსი, პ.? (ან სერ.) კორნელიუს მალუგინენსისი, ლ. ლუკრეციუს ტრიციპიტინუს ფლავიუსი, სერვიუს სულპიციუს ქ. ფ. კამერინუსი
 
-*[[ძვ. წ. 392|392]] ('''348 A.V.C.''') - ლ. ვალერიუს ლ.ფ. პოპიტუსი, პ.? (ან სერ.) კორნელიუს მალუგინენსისი, ლ. ლუკრეციუს ტრიციპიტინუს ფლავიუსი, სერვიუს სულპიციუს ქ. ფ. კამერინუსი
+*[[ძვ. წ. 392|392]] ('''362 A.V.C.''') - ლ. ვალერიუს ლ.ფ. პოპიტუსი, პ.? (ან სერ.) კორნელიუს მალუგინენსისი, ლ. ლუკრეციუს ტრიციპიტინუს ფლავიუსი, სერვიუს სულპიციუს ქ. ფ. კამერინუსი
 
-*[[ძვ. წ. 391|391]] ('''349 A.V.C.''') - ლ. ვალერიუს ლ.ფ. პოპიტუსი, პ.? (ან სერ.) კორნელიუს მალუგინენსისი, ლ. ლუკრეციუს ტრიციპიტინუს ფლავიუსი, სერვიუს სულპიციუს ქ. ფ. კამერინუსი
+*[[ძვ. წ. 391|391]] ('''363 A.V.C.''') - ლ. ვალერიუს ლ.ფ. პოპიტუსი, პ.? (ან სერ.) კორნელიუს მალუგინენსისი, ლ. ლუკრეციუს ტრიციპიტინუს ფლავიუსი, სერვიუს სულპიციუს ქ. ფ. კამერინუსი
 
-*[[ძვ. წ. 390|390]] ('''350 A.V.C.''') - ლ. ვალერიუს ლ.ფ. პოპიტუსი II, მარკუს მანილუს ტ.ფ., შემდგომში სამხედრო ტრიბუნი. ივლისის კალენდების შემდეგ: ლ. ლუკრეციუსი, სერვიუს სულპიციუსი, მ. აიმულუისი, ლ. ფურიუს მედულინუსი VII, აგრიპა ფურიუსი, კ. ამილიუსი II
+*[[ძვ. წ. 390|390]] ('''364 A.V.C.''') - ლ. ვალერიუს ლ.ფ. პოპიტუსი II, მარკუს მანილუს ტ.ფ., შემდგომში სამხედრო ტრიბუნი. ივლისის კალენდების შემდეგ: ლ. ლუკრეციუსი, სერვიუს სულპიციუსი, მ. აიმულუისი, ლ. ფურიუს მედულინუსი VII, აგრიპა ფურიუსი, კ. ამილიუსი II
 
-*[[ძვ. წ. 389|389]] ('''351 A.V.C.''') - სამხედრო ტრიბუნები
+*[[ძვ. წ. 389|389]] ('''365 A.V.C.''') - სამხედრო ტრიბუნები
 
-*[[ძვ. წ. 388|388]] ('''352 A.V.C.''') - დიქტატორი მ. ფურიუს კამილუსი, შემდეგ სამხედრო ტრიბუნები ლ. ვალერიუს პუბლიკოლა II, ლ. ვირგინიუსი, პ. კორნელიუს, ა. მანლიუსი, ლ. ამილიუსი, ლ. პოსტუმიუსი
+*[[ძვ. წ. 388|388]] ('''366 A.V.C.''') - დიქტატორი მ. ფურიუს კამილუსი, შემდეგ სამხედრო ტრიბუნები ლ. ვალერიუს პუბლიკოლა II, ლ. ვირგინიუსი, პ. კორნელიუს, ა. მანლიუსი, ლ. ამილიუსი, ლ. პოსტუმიუსი
 
-*[[ძვ. წ. 387|387]] ('''353 A.V.C.''') - სამხედრო ტრიბუნები ტ. კინტიუს ცინცინატუსი, ქ. სერვილიუს ფიდენასი V, ლ. იულიუს ტრეციპიტინუსი, სერვიუს სულპიციუს რუფუსი
+*[[ძვ. წ. 387|387]] ('''367 A.V.C.''') - სამხედრო ტრიბუნები ტ. კინტიუს ცინცინატუსი, ქ. სერვილიუს ფიდენასი V, ლ. იულიუს ტრეციპიტინუსი, სერვიუს სულპიციუს რუფუსი
 
-*[[ძვ. წ. 386|386]] ('''354 A.V.C.''') - სამხედრო ტრიბუნები ლ. პაპირიუსი, კ. სერგიუსი, ლ. ამილიუსი II, ლ. მენენიუსი, ლ. პუბლიკოლა III
+*[[ძვ. წ. 386|386]] ('''368 A.V.C.''') - სამხედრო ტრიბუნები ლ. პაპირიუსი, კ. სერგიუსი, ლ. ამილიუსი II, ლ. მენენიუსი, ლ. პუბლიკოლა III
 
-*[[ძვ. წ. 385|385]] ('''355 A.V.C.''') - სამხედრო ტრიბუნები მ. ფურიუს კამილუსი, სერვიუს კორნელიუს მალუგინესისი, ქ. სერვილიუს ფიდენასი VI, ლ. კინტიუს ცონცინატუსი (II?), ლ. ჰორაციუსი, ტ. ვალერიუსი (*[[382]] წლამდე ესენი მმართველობდნენ).
+*[[ძვ. წ. 385|385]] ('''369 A.V.C.''') - სამხედრო ტრიბუნები მ. ფურიუს კამილუსი, სერვიუს კორნელიუს მალუგინესისი, ქ. სერვილიუს ფიდენასი VI, ლ. კინტიუს ცონცინატუსი (II?), ლ. ჰორაციუსი, ტ. ვალერიუსი (*[[382]] წლამდე ესენი მმართველობდნენ).
 
-*[[ძვ. წ. 381|381]] ('''357 A.V.C.''') - სამხედრო ტრიბუნები სერვიუს კორნელიუს მალუგინესისი IV, ქ. სერვილიუსი, სერვილიუს სულპიციუსი, ლ. ამილიუსი IV
+*[[ძვ. წ. 381|381]] ('''373 A.V.C.''') - სამხედრო ტრიბუნები სერვიუს კორნელიუს მალუგინესისი IV, ქ. სერვილიუსი, სერვილიუს სულპიციუსი, ლ. ამილიუსი IV
 
-*[[ძვ. წ. 380|380]] - სამხედრო ტრიბუნები მ. ფურიუს კამილუსი VII, ა. და ლ. პოსტუმიუს რეგილუსები, ლ. ფურიუსი, ლ. ლუკრეციუსი, მ. ფაბიუს ამბუსტუსი
+*[[ძვ. წ. 380|380]] ('''374 A.V.C.''') - სამხედრო ტრიბუნები მ. ფურიუს კამილუსი VII, ა. და ლ. პოსტუმიუს რეგილუსები, ლ. ფურიუსი, ლ. ლუკრეციუსი, მ. ფაბიუს ამბუსტუსი
 
-*[[ძვ. წ. 379|379]] - სამხედრო ტრიბუნები ლუციუს ვალერიუსი III, კ. სერგიუსი III, ლ. მენენიუსი II, სპ. პაპირიუსი, სერვიუს კორნელიუს მალუგინენსისი
+*[[ძვ. წ. 379|379]] ('''375 A.V.C.''') - სამხედრო ტრიბუნები ლუციუს ვალერიუსი III, კ. სერგიუსი III, ლ. მენენიუსი II, სპ. პაპირიუსი, სერვიუს კორნელიუს მალუგინენსისი
 
-*[[ძვ. წ. 378|378]] - სამხედრო ტრიბუნები პ. და კ. მანლიუსები, ლ. იულიუსი, კ. სექსტილიუსი, მ. ალბინიუსი, ლ. ანტისციუსი (პარიციუსი და პლებსი)
+*[[ძვ. წ. 378|378]] ('''376 A.V.C.''') - სამხედრო ტრიბუნები პ. და კ. მანლიუსები, ლ. იულიუსი, კ. სექსტილიუსი, მ. ალბინიუსი, ლ. ანტისციუსი (პარიციუსი და პლებსი)
 
-*[[ძვ. წ. 377|377]] - სამხედრო ტრიბუნები სპ. ფურიუსი, ლ. სერვილიუს II, ც. ლიცინიუსი, პ. კლაელიუსი, მ. ჰორაციუსი, ლ. გეგანიუსი.
+*[[ძვ. წ. 377|377]] ('''377 A.V.C.''') - სამხედრო ტრიბუნები სპ. ფურიუსი, ლ. სერვილიუს II, ც. ლიცინიუსი, პ. კლაელიუსი, მ. ჰორაციუსი, ლ. გეგანიუსი.
 
-*[[ძვ. წ. 376|376]] - სამხედრო ტრიბუნები ლ. ამილიუსი, პ. ვალერიუს IV, კ. ვეტურიუს სერვიუს სულპიციუსი, ლ. და კ. კინტიუს ცინცინატუსები
+*[[ძვ. წ. 376|376]] ('''378 A.V.C.''') - სამხედრო ტრიბუნები ლ. ამილიუსი, პ. ვალერიუს IV, კ. ვეტურიუს სერვიუს სულპიციუსი, ლ. და კ. კინტიუს ცინცინატუსები
 
-*[[ძვ. წ. 375|375]] - მხოლოდ ორი ტრიბუნი, კ. ლიცინიუს კლავიუსი, ლუციუს სექსტიუსი
+*[[ძვ. წ. 375|375]] ('''379 A.V.C.''') - მხოლოდ ორი ტრიბუნი, კ. ლიცინიუს კლავიუსი, ლუციუს სექსტიუსი
 
-*[[ძვ. წ. 374|374]] -  სამხედრო ტრიბუნები ლ. ლურიუსი, ა. მანლიუსი, სერვიუს სულპიციუსი, სერვიუს კორნელიუსი, პ. და კ. ვალერიუსები.
+*[[ძვ. წ. 374|374]] ('''380 A.V.C.''') -  სამხედრო ტრიბუნები ლ. ლურიუსი, ა. მანლიუსი, სერვიუს სულპიციუსი, სერვიუს კორნელიუსი, პ. და კ. ვალერიუსები.
 
 {{ესკიზი}}
 
