*Empty MediaWiki Message*

--- a/რომის_რესპუბლიკის_კონსულების_სია.mw
+++ b/რომის_რესპუბლიკის_კონსულების_სია.mw
@@ -1,4 +1,8 @@
-ეს არის [[რომის_რესპუბლიკა|რომაელ]] კონსულთა სია ვარონის ქრონიკებზე დაყრდნობით.
+ეს არის [[რომის_რესპუბლიკა|რომაელ]] კონსულთა სია [[მარკუს ტერენციუს ვარონი|ვარონის]] ქრონიკებზე დაყრდნობით.
+
+იგივე სტატია [[la:Index_consulum_rei_publicae|ლათინურად]]
+
+მუქად აღნიშნულია წელთაღრიცხვა რომის დაარსებიდან (იხ. [[რომაული კალენდარი]])
 
 ==ძვ. წ. VI საუკუნე==
 
