/* ძვ. წ. VI საუკუნე */

--- a/რომის_რესპუბლიკის_კონსულების_სია.mw
+++ b/რომის_რესპუბლიკის_კონსულების_სია.mw
@@ -5,7 +5,7 @@
 
 ==ძვ. წ. VI საუკუნე==
 
-* [[ძვ. წ. 509|509]] ('''245 A.V.C.''') - [[ლუციუს იუნიუს ბრუტუსი]], ლუციუს ტარკვინიუს კოლატინუსი
+* [[ძვ. წ. 509|509]] ('''245''' [[რომაული კალენდარი|A.V.C.]]) - [[ლუციუს იუნიუს ბრუტუსი]], ლუციუს ტარკვინიუს კოლატინუსი
 
 * [[ძვ. წ. 509|509]] ('''245 A.V.C.''') - პ. ვალერიუს ვოლუსი ფ. პუბლიკოლა, სპ. ლუკრეციუს ტრიციპიტინუს, მარკუს ჰორაციუს პულნუსი.
 
