/* ძვ. წ. IV საუკუნე */

--- a/რომის_რესპუბლიკის_კონსულების_სია.mw
+++ b/რომის_რესპუბლიკის_კონსულების_სია.mw
@@ -245,6 +245,20 @@
 
 *[[ძვ. წ. 374|374]] ('''380''' A.V.C.) -  სამხედრო ტრიბუნები ლ. ლურიუსი, ა. მანლიუსი, სერვიუს სულპიციუსი, სერვიუს კორნელიუსი, პ. და კ. ვალერიუსები.
 
+*[[ძვ. წ. 373|373]] ('''381''' A.V.C.) - სამხედრო ტრიბუნები კ. სერვილიუსი, კ. ვეტურიუსიი, ა. და მ. კორნელიუსი, ქ. კინტიუსი, მ. ფაბიუსი
+
+*[[ძვ. წ. 372|372]] ('''382''' A.V.C.) - სამხედრო ტრიბუნები ტ. კინტიუსი, სერვიუს კორნელიუსი, კ. კინტიუსი, მ. ფაბიუსი
+
+*[[ძვ. წ. 371|371]] ('''383''' A.V.C.) - სამხედრო ტრიბუნები კ. ლიცინიუს სტოლო, ლიცინიუს სექსტიუსი
+
+*[[ძვ. წ. 370|370]] ('''384''' A.V.C.) - სამხედრო ტრიბუნები კ. ლიცინიუს სტოლო, ლიცინიუს სექსტიუსი
+
+*[[ძვ. წ. 369|369]] ('''385''' A.V.C.) - სამხედრო ტრიბუნები კ. ლიცინიუს სტოლო, ლიცინიუს სექსტიუსი
+
+*[[ძვ. წ. 368|368]] ('''386''' A.V.C.) - სამხედრო ტრიბუნები კ. ლიცინიუს სტოლო, ლიცინიუს სექსტიუსი
+
+*[[ძვ. წ. 367|367]] ('''387''' A.V.C.) - სამხედრო ტრიბუნები კ. ლიცინიუს სტოლო, ლიცინიუს სექსტიუსი
+
 {{ესკიზი}}
 
 ==ძვ. წ. III საუკუნე==
