/* [[ნუმა პომპილიუსი|ნუმა პომპილიუსის]] კალენდრის რეფორმა */

--- a/რომაული_კალენდარი.mw
+++ b/რომაული_კალენდარი.mw
@@ -19,7 +19,7 @@
 
 ==[[ნუმა პომპილიუსი|ნუმა პომპილიუსის]] კალენდრის რეფორმა==
 
-[[მთვარის კალენდარი|მთვარის კალენდრის]] შემოღებას ტრადიციულად ნუმა პომპილიუს მიაწერენ. 30 დღიანი თვეები 29 დღემდე შეიკვეცა და წლის ბოლოს ორი თვე დაემატა: 29 დღიანი Ianuarius ღმერთ [[იანუსი (ღმერთი)|იანუსის]] საპატივცემლოდ და Februarius 28 დღით, რაც განწმენდას ნიშნავს. მიუხედავად ამისა 10 დღე მაინც კალენდარგარეთ დარჩა. ამის ამოსავსებად დამატებით თვეს იყენებდნენ ('''Mensis Intercalaris'''). დამატებითი თვე რამდენიმე წელში ერთხელ ჯდებოდა, და თუ როდის უნდა ყოფილიყო იგი გამოყენებული [[დიდი პონტიფიკუსი]] წყვეტდა. ამ კალენდარული სისტემის პირველად გადახედვა მოხდა [[მეორე პუნიკური ომი|მეორე პუნიკური ომის]] შემდეგ და მეორედ ეს [[იულიუს კეისარი|იულიუს კეისარმა]] გააკეთა, უფრო სწორად რომ ვთქვათ მან შეცვალა მთელი სისტემა და მთვარის კალედრის ნაცვლად მზის კალენდარი შემოიღო, რომელსაც [[იულიანური კალენდარი]] დაერქვა.
+[[მთვარის კალენდარი|მთვარის კალენდრის]] შემოღებას ტრადიციულად ნუმა პომპილიუს მიაწერენ{{სქოლიო|ეტრუსკი}}. 30 დღიანი თვეები 29 დღემდე შეიკვეცა და წლის ბოლოს ორი თვე დაემატა: 29 დღიანი Ianuarius ღმერთ [[იანუსი (ღმერთი)|იანუსის]] საპატივცემლოდ და Februarius 28 დღით, რაც განწმენდას ნიშნავს. მიუხედავად ამისა 10 დღე მაინც კალენდარგარეთ დარჩა. ამის ამოსავსებად დამატებით თვეს იყენებდნენ ('''Mensis Intercalaris'''). დამატებითი თვე რამდენიმე წელში ერთხელ ჯდებოდა, და თუ როდის უნდა ყოფილიყო იგი გამოყენებული [[დიდი პონტიფიკუსი]] წყვეტდა. ამ კალენდარული სისტემის პირველად გადახედვა მოხდა [[მეორე პუნიკური ომი|მეორე პუნიკური ომის]] შემდეგ და მეორედ ეს [[იულიუს კეისარი|იულიუს კეისარმა]] გააკეთა, უფრო სწორად რომ ვთქვათ მან შეცვალა მთელი სისტემა და მთვარის კალედრის ნაცვლად მზის კალენდარი შემოიღო, რომელსაც [[იულიანური კალენდარი]] დაერქვა.
 
 ==იულიანური კალენდარი==
 (იხ. [[იულიანური კალენდარი]])
