*Empty MediaWiki Message*

--- a/რომაული_კალენდარი.mw
+++ b/რომაული_კალენდარი.mw
@@ -61,7 +61,9 @@
 
 რესპუბლიკის პერიოდში რომაელებს არ ჰქონდათ წლების ათვლის სისტემა. წლებს არქმევდნენ კონსულების სახელებს (იხ. [[რომაელ კონსულთა სია]]). მაგალითად ძვ. წ. 413 წელი იყო ''აულუს მარკუს კორნელიუს კოსუსის და ლუციუს ფურიუს ლ.ფ. მედულინუსის კონსულობის წელი''. ხოლო გვიანდელ რესპუბლიკაში შემოვიდა რომის დაარსებიდან წლების ათვლა. [[მარკუს ტერენციუს ვარონი|ვარონის]] თანახმად ეს [[ძვ. წ. 753]] წელს მოხდა. რომის დაარსებიდან წლების ათვლა აღინიშნება როგორც ''ab urbe condita'' შემოკლებულად (a.u.c.).
 
+==შენიშვნები==
 
+{{სქოლიო2|ეტრუსკები}}
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:კალენდარი]]
