--- a/რომაული_კალენდარი.mw
+++ b/რომაული_კალენდარი.mw
@@ -63,7 +63,7 @@
 
 ==შენიშვნები==
 
-{{სქოლიო2|ეტრუსკი}} - არსებობს ვარაუდო რომ 12 თვიანი კალენდარი რომაელებმა ეტრუსკებისგან გადაიღეს
+{{სქოლიო2|ეტრუსკი}} - არსებობს ვარაუდი რომ 12 თვიანი კალენდარი რომაელებმა ეტრუსკებისგან გადაიღეს
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:კალენდარი]]
