*Empty MediaWiki Message*

--- a/ტიბრი.mw
+++ b/ტიბრი.mw
@@ -1,8 +1,8 @@
-[[სურათი:Tiber_river.jpg|thumb|300px|Tiber River in Rome]]
-'''მდინარე ტიბროსი''' (იტ. ''Tevere''), სიგრძით მესამე მდინარეა იტალიაში 406 კმ-ით მდ. პოსა და ადიგის შემდეგ; სათავეს იღებს მთა ფუმაიოლოდან და რომის გავლით ტირენეოსის ზღვაში ჩაედინება ორი განშტოებით.
+[[სურათი:Tiber_river.jpg|thumb|300px|მდ. ტიბროსი რომში]]
+'''მდინარე ტიბროსი''' (იტ. ''Tevere''), სიგრძით მესამე მდინარეა [[იტალია|იტალიაში]] 406 კმ-ით მდ. პოსა და ადიგის შემდეგ; სათავეს იღებს მთა ფუმაიოლოდან და [[რომი|რომის]] გავლით ტირენეოსის ზღვაში ჩაედინება ორი განშტოებით.
 
 ==სახელწოდება==
-სახელწოდება სავარაუდოდ ლათინოამდელია, რომაული სახელი ტიბურის მსგავსად (თანამ. ტივოლი). მითიური მეფე ტიბერინუსი, მეცხრე ლეგენდარული ალბა-ლონგას მეფეთა სიიდან, ლეგენდის თანახმად მდინარე ალბულაში დამხრჩვალა, რის გამოც მას შემდეგ ტიბროსი დაერქვა. სახელი შესაძლოა ასევე მომდინარეობდეს ინდო-ევროპულამდელი ენიდან "თეთრი" დანალექით. ასევე ლეგენდის თანახმად, რომის დამფუძნებლები, ტყუპი ძმები [[რომულუსი|რომულუსი და რემუსი]] ამ მდინარეში გადაარჩინა ძუ მგელმა.
+სახელწოდება სავარაუდოდ ლათინოამდელია, რომაული სახელი ტიბურის მსგავსად (თანამ. ტივოლი). მითიური მეფე ტიბერინუსი, მეცხრე ლეგენდარული [[ალბა-ლონგა|ალბა-ლონგას]] მეფეთა სიიდან, ლეგენდის თანახმად მდინარე ალბულაში დამხრჩვალა, რის გამოც მას შემდეგ ტიბროსი დაერქვა. სახელი შესაძლოა ასევე მომდინარეობდეს ინდო-ევროპულამდელი ენიდან "თეთრი" დანალექით. ასევე ლეგენდის თანახმად, რომის დამფუძნებლები, ტყუპი ძმები [[რომულუსი|რომულუსი და რემუსი]] ამ მდინარეში გადაარჩინა ძუ მგელმა.
 
 ==ისტორია==
 
