*Empty MediaWiki Message*

--- a/რომი.mw
+++ b/რომი.mw
@@ -1,12 +1,12 @@
 [[სურათი:Rome city flag.png|thumb|right|ქ. რომის დროშა]]
-'''რომი''' ([[იტალიური ენა|იტალიურად]] და [[ლათინური ენა|ლათინურად]]: Roma) მთლიანად [[იტალია|იტალიისა]] და მისი [[ლატიუმის რეგიონი|ლატიუმის რეგიონის]] [[დედაქალაქი|დედაქალაქია]]. ის განლაგებულია [[ტიბრი|ტიბრისა]] და [[ანიენი|ანიენის]] მდინარეების გარშემო, [[ხმელთაშუა ზღვა|ხმელთაშუა ზღვასთან]], 41° 54′ N, 12° 29′ E განზობილებაზე. ქალაქი [[ვატიკანი]], სუვერენული ანკლავი რომში, [[რომაული კათოლიკური ეკლესია|რომაული კათოლიკური ეკლესიისა]] და [[რომის პაპა|რომის პაპის]] საბრძანებელს წარმოადგენს.
+'''რომი''' ([[იტალიური ენა|იტალიურად]] და [[ლათინური ენა|ლათინურად]]: Roma) მთლიანად [[იტალია|იტალიისა]] და მისი [[ლატიუმის რეგიონი|ლატიუმის რეგიონის]] [[დედაქალაქი|დედაქალაქია]]. ის განლაგებულია [[ტიბროსი|ტიბროსისა]] და [[ანიენი|ანიენის]] მდინარეების გარშემო, [[ხმელთაშუა ზღვა|ხმელთაშუა ზღვასთან]], 41° 54′ N, 12° 29′ E კოორდინატებზე. ქალაქი [[ვატიკანი]], სუვერენული ანკლავი რომში, [[რომაული კათოლიკური ეკლესია|რომაული კათოლიკური ეკლესიისა]] და [[რომის პაპა|რომის პაპის]] საბრძანებელს წარმოადგენს.
 
 
 რომი იტალიის უდიდესი ქალაქია და მისი [[მუნიციპალიტეტი]] ერთ-ერთი უმსხვილესია [[ევროპა|ევროპაში]] 120 კმ² ფართობით (ადვილად მოიცავდა დანარჩენ ცხრა უმსხვილეს იტალიურ ქალაქს: [[მილანი|მილანს]], [[ნეაპოლი|ნეაპოლს]], [[ტურინი|ტურინს]], [[პალერმო|პალერმოს]], [[გენუა|გენუას]], [[ნოლონია|ბოლონიას]], [[ფლორენსი|ფლორენსს]], [[ბარი|ბარისა]] და [[კატალინა|კატალინას]], და ასევე ოთხ უმსხვილეს ევროპულ ქალაქს, როგორიცაა [[პარიზი]], [[ბერლინი]], [[სტოკჰოლმი]] და [[ბრიუსელი]]). მოსახლეობა შეადგენს 2.546.807 (2004), ხოლო დაახლოებით 4 მილიონი სახლობს მისი გარეუბნების ჩათვლით. რომის ახლანდელი მერი არის [[ველტრონი, ვალტერ|ვალტერ ველტრონი]] (2005).
 
 
 [[სურათი:Roma-Stemma.png|thumb|right|ქ. რომის გერბი]]
-რომის ეშპ შეადგენს 75 მილიარდ ევროს ([[ახალი ზელანდია|ახალ ზელანდიაზე]] მეტი და იმდენივე რაც [[სინგაპური|სინგაპურის]] - თუმცა სამივეს დაახლოებით თანაბარი მოსახლეობა ჰყავს). 2001 წელს რომის მუნიციპალიტეტმა გამოიმუშავა იტალიის მთლიანი ეშპ-ს 6.5%, რაც ყველაზე მაღალია იტალიის ქალაქთა შორის.
+რომის [[ეშპ]] შეადგენს 75 მილიარდ [[ევრო|ევროს]] ([[ახალი ზელანდია|ახალ ზელანდიაზე]] მეტი და იმდენივე რაც [[სინგაპური|სინგაპურის]] - თუმცა სამივეს დაახლოებით თანაბარი მოსახლეობა ჰყავს). 2001 წელს რომის მუნიციპალიტეტმა გამოიმუშავა იტალიის მთლიანი ეშპ-ს 6.5%, რაც ყველაზე მაღალია იტალიის ქალაქთა შორის.
 
 
 ქალაქის ისტორია დაახლოებით 2.800 წელს გრძელდება, რომლის განმავლობაშიც ის მართავდა ძველ რომს ([[რომის სამეფო]], [[რომის რესპუბლიკა]], [[რომის იმპერია]]), მოგვიანებით კი პაპის დაქვემდებარებაში მყოფ ქვეყნებს, [[იტალიის სამეფო|იტალიის სამეფოსა]] და [[იტალიის რესპუბლიკა|იტალიის რესპუბლიკას]].
