*Empty MediaWiki Message*

--- a/დედამიწა.mw
+++ b/დედამიწა.mw
@@ -135,6 +135,9 @@
 * წყნარი ოკეანის ფილა - წყნარი ოკეანის უდიდესი ნაწილი.
 არსებობს ოციოდე პატარა ფილაც, როგორიცაა, მაგ. არაბეთის, ფილიპინების.
 
+{{მზის სისტემა}}
+[[კატეგორია:მზის სისტემა]]
+
 [[af:Aarde]]
 [[ang:Eorðe]]
 [[ar:أرض]]
