--- a/დედამიწა.mw
+++ b/დედამიწა.mw
@@ -125,14 +125,14 @@
 [[Image:World map.png|thumb|left|300px|''დედამიწის [[ტოპოგრაფიული რუკა]] XX ს.'']]
 <br clear="left" />
 დედამიწის ქერქი დაყოფილია სხვადასხვა სიდიდის ლითოსფერულ ფილებად, რომლებიც ერთმანეთის მიმართ გადადგილდებიან. ამ მოძრაობებს აღწერს [[ტექტონიკა]].
-* ჩრდილოეთი ამერიკის ფილა]] - ჩრდილოეთი ამერიკა, ჩრდილო-დასავლეთი ატლანტიკა და [[გრენლანდია]]
-* სამხრეთი ამერიკის ფილა]] - სამხრეთი ამერიკა და სამხრეთ-დასავლეთი ატლანტიკა
-* ანტარქტიკული ფილა - [[ანტარქტიკა]]
-* ევრაზიული ფილა - ჩრდილო-აღმოსავლეთი [[ატლანტიკა]], ევროპა და აზია ინდოეთის გარდა
-* აფრიკული ფილა - [[აფრიკა]], ატლანტიკის სამხრეთ-აღმოსავლეთი და ინდოეთის ოკეანის დასავლეთი
-* ინდოავსტრალიური ფილა - [[ინდოეთი]], [[ავსტრალია]], [[ახალი ზელანდია]] და [[ინდოეთის ოკეანე|ინდოეთის ოკეანის]] უდიდესი ნაწილი
-* [[ნასკას]] ფილა - [[წყნარი ოკეანე|წყნარი ოკეანის]] სამხრეთი რომელიც ეკვრის [[სამხრეთი ამერიკა|სამხრეთ ამერიკას]]
-* წყნარი ოკეანის ფილა - წყნარი ოკეანის უდიდესი ნაწილი.
+* '''ჩრდილოეთი ამერიკის ფილა''' - [[ჩრდილოეთი ამერიკა]], ჩრდილო-დასავლეთი [[ატლანტიკა]] და [[გრენლანდია]]
+* '''სამხრეთი ამერიკის ფილა''' - სამხრეთი ამერიკა და სამხრეთ-დასავლეთი ატლანტიკა
+* '''ანტარქტიკული ფილა''' - [[ანტარქტიკა]]
+* '''ევრაზიული ფილა''' - ჩრდილო-აღმოსავლეთი [[ატლანტიკა]], [[ევროპა]] და [[აზია]] ინდოეთის გარდა
+* '''აფრიკული ფილა''' - [[აფრიკა]], ატლანტიკის სამხრეთ-აღმოსავლეთი და [[ინდოეთის ოკეანე|ინდოეთის ოკეანის]] დასავლეთი
+* '''ინდოავსტრალიური ფილა''' - [[ინდოეთი]], [[ავსტრალია]], [[ახალი ზელანდია]] და [[ინდოეთის ოკეანე|ინდოეთის ოკეანის]] უდიდესი ნაწილი
+* '''[[ნასკას]] ფილა''' - [[წყნარი ოკეანე|წყნარი ოკეანის]] სამხრეთი რომელიც ეკვრის [[სამხრეთი ამერიკა|სამხრეთ ამერიკას]]
+* '''წყნარი ოკეანის ფილა''' - წყნარი ოკეანის უდიდესი ნაწილი.
 არსებობს ოციოდე პატარა ფილაც, როგორიცაა, მაგ. არაბეთის, ფილიპინების.
 
 {{მზის სისტემა}}
