--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -1,3 +1,4 @@
+{{რომის მთავრობა}}
 [[სურათი:Senat_rom.jpg|thumb|300px|ციცერონის გამოსვლა სენატის წინაშე]]
 '''რომის სენატი''' (''[[ლათინური ენა|ლათინურად]] - Senatus'') იყო რომის რესპუბლიკის და იმპერიის პრიოდში მართვის მნიშვნელოვანი ორგანო. სიტყვა senex ნათინურად ნიშნავს უხუცესს. თავდაპირველად სენატი სწორედ უხუცესთა საბჭო იყო, ხოლო მოგვიანებით მას ბევრად ფართო მნიშვნელობა შეეძინა.
 
