*Empty MediaWiki Message*

--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -1,7 +1,7 @@
 {{რომის მთავრობა}}
-[[სურათი:Senat_rom.jpg|thumb|300px|ციცერონის გამოსვლა სენატის წინაშე]]
 '''რომის სენატი''' (''[[ლათინური ენა|ლათინურად]] - Senatus'') იყო რომის რესპუბლიკის და იმპერიის პრიოდში მართვის მნიშვნელოვანი ორგანო. სიტყვა senex ნათინურად ნიშნავს უხუცესს. თავდაპირველად სენატი სწორედ უხუცესთა საბჭო იყო, ხოლო მოგვიანებით მას ბევრად ფართო მნიშვნელობა შეეძინა.
 
+[[სურათი:Senat_rom.jpg|thumb|left|250px|ციცერონის გამოსვლა სენატის წინაშე]]
 ==ისტორია==
 
 {{ესკიზი}}
