--- a/რომის_რესპუბლიკა.mw
+++ b/რომის_რესპუბლიკა.mw
@@ -1,8 +1,8 @@
+<left>{{რომი}}</left>
+
 [[სურათი:Roma.JPG|thumb|370px|ქალაქ რომის გეგმა რესპუბლიკის პერიოდში]]
 ''([[ლათინური ენა|ლათინურად]]: Res Publica Romanorum)''
 
-
-<table border="2" cellpadding="4" cellspacing="0" style="margin: 1em 1em 1em 0; border: 1px #aaa solid; border-collapse: collapse;><tr><td>[[რომის სამეფო]]</td><td>[[რომის რესპუბლიკა]]</td><td>[[რომის იმპერია]]</td></tr></table></center>
 
 
 ==რესპუბლიკის სახელმწიფო წყობა==
