*Empty MediaWiki Message*

--- a/რომის_რესპუბლიკა.mw
+++ b/რომის_რესპუბლიკა.mw
@@ -1,4 +1,4 @@
-<left>{{რომი}}</left>
+<align="left">{{რომი}}</align>
 
 [[სურათი:Roma.JPG|thumb|370px|ქალაქ რომის გეგმა რესპუბლიკის პერიოდში]]
 ''([[ლათინური ენა|ლათინურად]]: Res Publica Romanorum)''
