*Empty MediaWiki Message*

--- a/რომის_რესპუბლიკა.mw
+++ b/რომის_რესპუბლიკა.mw
@@ -1,4 +1,4 @@
-<align="left">{{რომი}}</align>
+{{რომი}}
 
 [[სურათი:Roma.JPG|thumb|370px|ქალაქ რომის გეგმა რესპუბლიკის პერიოდში]]
 ''([[ლათინური ენა|ლათინურად]]: Res Publica Romanorum)''
@@ -282,8 +282,7 @@
 * http://www.thelatinlibrary.com/ ბიბლიოთეკა ლათინურ ენაზე
 * http://ancientrome.ru/antlitr/cicero/index.htm ციცერონის ნაწარმოებები
 
-
-<center><table border="2" cellpadding="4" cellspacing="0" style="margin: 1em 1em 1em 0; border: 1px #aaa solid; border-collapse: collapse;><tr><td>[[რომის სამეფო]]</td><td>[[რომის რესპუბლიკა]]</td><td>[[რომის იმპერია]]</td></tr></table></center>
+{{რომი}}
 
 [[კატეგორია:ძველი რომი]]
 
