*Empty MediaWiki Message*

--- a/რომის_სამეფო.mw
+++ b/რომის_სამეფო.mw
@@ -2,8 +2,6 @@
 ''([[ლათინური ენა|ლათინურად]]: Regnum Romanum)''
 
 
-<center><table border="2" cellpadding="4" cellspacing="0" style="margin: 1em 1em 1em 0; border: 1px #aaa solid; border-collapse: collapse;><tr><td>რომის სამეფო</td><td>[[რომის რესპუბლიკა]]</td><td>[[რომის იმპერია]]</td></tr></table></center>
-
 [[სურათი:Mgeli.JPG|thumb|250px|ლეგენდის მიხედვით ტყუპები რომული და რემი მგელმა გამოკვება თავისი რძით]]
 
 
@@ -141,8 +139,7 @@ http://www.ancientrome.ru/antlitr/livi/kn01-f.htm
 
 '''არსებობის პერიოდი''': [[ძვ. წ. 753]] - [[ძვ. წ. 510]]
 
-
-<center><table border="2" cellpadding="4" cellspacing="0" style="margin: 1em 1em 1em 0; border: 1px #aaa solid; border-collapse: collapse;><tr><td>რომის სამეფო</td><td>[[რომის რესპუბლიკა]]</td><td>[[რომის იმპერია]]</td></tr></table></center>
+{{რომი}}
 
 [[კატეგორია:ძველი რომი]]
 
