*Empty MediaWiki Message*

--- a/მერკური.mw
+++ b/მერკური.mw
@@ -1,4 +1,4 @@
-[[სურათი:Mercury inside Lmb.png|thumb|right|200px|სამხრეთ ნახევარსფეროს კომპიუტერული მოზაიკა]]
+[[სურათი:Mercuryglobe1.jpg|thumb|right|250px|სამხრეთ ნახევარსფეროს კომპიუტერული მოზაიკა]]
 '''მერკური''' ყველაზე ახლოს მდებარეობს [[მზე|მზესთან]] და [[მზის სისტემა|მზის სისტემის]] რიგით მეორე ყველაზე მცირე პლანეტაა. მერკურის ყველზე დიდი კუთხური დაშორება მზისგან მხოლოდ 28.3°-ია და მისი დანახვა მხოლოდ გარიჟრაჟზე ან შებინდებისას შეიძლება. პლანეტა შედარებიც მცირედაა შესწვლილი: ერთადერთი კოსმოსური ხომალდი, რომელმაც მერკურს მიაღწია იყო ’’მარინერ 10’’ (1974-75), რომელმაც პლანეტის ზედაპირის მხოლოდ 45%-ის დაფიქსირება შეძლო.
 
 ფიზიკურად მერკური ემსგავსება [[მთვარე|მთვარეს]], ვინაიდან მისი ზედაპირიც კრატერებითაა დაფარული. მას არა ჰყავს ბუნებრივი სატელიტები და საკუთარი ატმოსფერო. პლანეტას მასშტაბური რკინის გული აქვს, რომელიც მაგნიტურ ველს წარმოქმნის (დედამიწის ველის დაახ. 1%). მერკურის ზედაპირის ტემპერატურა მერყეობს 90-700 K შორის - სუბსოლარული წერტილები ყველაზე ცხელია და კრატერთა ძირები მის პოლუსებთან კი ყველაზე ცივი.
