--- a/მარსი.mw
+++ b/მარსი.mw
@@ -1,11 +1,11 @@
 [[სურათი:Mars Valles Marineris.jpeg|thumb|250px|მარსის კომპოზიციური გამოსახულება]]
-'''მარსი''' მეოთხე პლანეტაა სიშორით მზის სისტემაში. მას რომაული ომის ღმერთის მარსის სახელი ჰქვია (არესი ბერძნულ მითოლოგიაში). მარს ასევე მეტსახელად ”წითელი პლანეტა” ჰქვია დედამიწიდან ღამით ცაზე მისი შეფერილობის გამო. მას ორი თანამგზავრი ჰყავს - ფობოსი და დეიმოსი - მცირე და უსწორმასწორო ზედაპირის სხეულები, შესაძლოა მარისის გრავიტაციაში მოქცეული ასტეროიდები იყოს.
+'''მარსი''' მეოთხე პლანეტაა სიშორით [[მზის სისტემა|მზის სისტემაში]]. მას რომაული ომის ღმერთის [[მარსი (ღმერთი)|მარსის]] სახელი ჰქვია ([[არესი]] ბერძნულ მითოლოგიაში). მარს ასევე მეტსახელად ”წითელი პლანეტა” ჰქვია დედამიწიდან ღამით ცაზე მისი შეფერილობის გამო. მას ორი თანამგზავრი ჰყავს - [[ფობოსი]] და [[დეიმოსი]] - მცირე და უსწორმასწორო ზედაპირის სხეულები, შესაძლოა მარსის გრავიტაციაში მოქცეული [[ასტეროიდი|ასტეროიდები]] იყოს.
 
-პრეფიქსი არეო- მიუთითებს მარსზე ისევე როგორც გეო- მიუთითებს დედამიწაზე, მაგალითად, არეოლოგია/გეოლოგია. არეოლოგია ასევე მიუთითებს მარსის ერთიანად და არა მხოლოდ პლანეტის გეოლოგიური პროცესების შესწავლაზე.
+პრეფიქსი არეო- მიუთითებს მარსზე ისევე როგორც გეო- მიუთითებს დედამიწაზე, მაგალითად, არეოლოგია/[[გეოლოგია]]. [[არეოლოგია]] ასევე მიუთითებს მარსის ერთიანად და არა მხოლოდ პლანეტის გეოლოგიური პროცესების შესწავლაზე.
 
 მარსის ასტრონომიული სიმბოლოა ♂, რომელიც სტილიზებული რეპრეზენტაციაა ღმერთი მარსის შუბისა და ფარის და ბიოლოგიაში მას იყენებენ როგორ მამრობითი სქესის ნიშანს.
 
-ჩინურ, კორეულ, იაპონურ და ვიეტნამურ კულტურებში პლანეტას მოიხსენიებენ როგორც ცეცხლოვან ვარსკვლავს (火星), ძველი ჩინური ხუთი ელემენტის მითოლოგიური ციკლზე დაყრდნობით.
+ჩინურ, კორეულ, იაპონურ და ვიეტნამურ კულტურებში პლანეტას მოიხსენიებენ როგორც ცეცხლოვან ვარსკვლავს (火星), ძველი ჩინური ხუთი ელემენტის მითოლოგიურ ციკლზე დაყრდნობით.
 
 {{ესკიზი}}
 
