--- a/მარსი_(ღმერთი).mw
+++ b/მარსი_(ღმერთი).mw
@@ -1,5 +1,5 @@
 [[სურათი:მარსი.jpg|thumb|მარსი]]
-'''მარსი''' (''[[ლათინური ენა|ლათ.]] '''Mars''''') რომაულ მითოლოგიაში ომის ღმერთი, ძე იუნოსა და იუპიტერის (ან მაგიური ყვავილის). ვინაიდან სიტყვას ''მარსი'' ინდო-ევროპული ძირი არა აქვს, სავარაუდოა, რომ ეს იყოს ეტრუსკული მიწათმოქმედების ღმერთი მარისის ლათინიზირებული ფორმა. 
+'''მარსი''' (''[[ლათინური ენა|ლათ.]] '''Mars''''') რომაულ მითოლოგიაში ომის ღმერთი, ძე იუნოსა და [[იუპიტერი (ღმერთი)|იუპიტერის]] (ან მაგიური ყვავილის). ვინაიდან სიტყვას ''მარსი'' ინდო-ევროპული ძირი არა აქვს, სავარაუდოა, რომ ეს იყოს ეტრუსკული მიწათმოქმედების ღმერთი მარისის ლათინიზირებული ფორმა. 
 
 {{ესკიზი}}
 
