--- a/ძვ._წ._146.mw
+++ b/ძვ._წ._146.mw
@@ -3,7 +3,7 @@
 </div>
 
 ==მოვლენები==
-* [[მესამე პუნიკური ომი]]. [[რომის რესპუბლიკა|რომაელებმა]] [[კართაგენი|კართაგენს]] შტურმი დაიწყეს.
+* [[პუნიკური ომები|მესამე პუნიკური ომი]]. [[რომის რესპუბლიკა|რომაელებმა]] [[კართაგენი|კართაგენს]] შტურმი დაიწყეს.
 
 
 ==დაიბადნენ==
