*Empty MediaWiki Message*

--- a/ძვ._წ._149.mw
+++ b/ძვ._წ._149.mw
@@ -3,7 +3,7 @@
 </div>
 
 ==მოვლენები==
-* [[მესამე პუნიკური ომი]] დაიწყო. [[რომის რესპუბლიკა|რომაელებმა]] [[კართაგენი|კართაგენს]] ალყა შემოარტყეს.
+* [[პუნიკური ომები|მესამე პუნიკური ომი]] დაიწყო. [[რომის რესპუბლიკა|რომაელებმა]] [[კართაგენი|კართაგენს]] ალყა შემოარტყეს.
 
 
 ==დაიბადნენ==
