*Empty MediaWiki Message*

--- a/იუპიტერი_(ღმერთი).mw
+++ b/იუპიტერი_(ღმერთი).mw
@@ -1,5 +1,31 @@
-იუპიტერი - რომაულ მითოლოგიაში ჭექაქუხილის და ელვის ღმერთი
+[[სურათი:IngresJupiterAndThetis.jpg|thumb|250px|იუპიტერი და თეტისი, ჟან ინგრესი, 1811]]
+იუპიტერი - რომაულ მითოლოგიაში ჭექაქუხილის და ელვის ღმერთი, და მას იგივე როლი ჰქონდა, როგორც [[ზევსი|ზევსს]] ბერძნულ [[პანთეონი|პანთეონში]]. მას უწოდებდნენ ''იუპიტერ ოპტიმუს მაქსიმუსი'' (იუპიტერი უმაღლესი, უდიდებულესი), როგორც რომაული სახელმწიფოს მფარველ ღვთაებას, კანონისა და სოციალური წესრიგის განმკარგავს. სახელი მომდინარეობს სიტყვებიდან Jove და pater (ლათ. მამა).
+
+ამავე ღმერთის სახელი დაერქვა პლანეტა იუპიტერს და თავდაპირველად ხუთშაბათსაც (ამჟ. ფრანგ. jeudi, ლათ. Jovis Dies-დან). ლინგვისტური კვლევების თანახმად ეს სახელი უნდა მომდინარეობდეს გერმანიკული Tiwaz (და Zeus)-დან, რომელიც ასევე სამშაბათს ერქვა. ასევე ეტიმოლოგიური კავშირია ვედურ რელიგიასთან (Dyaus Pita).
+
 
 {{ესკიზი}}
 
 [[კატეგორია:რომაული მითოლოგია]]
+
+
+[[bg:Юпитер (бог)]]
+[[cy:Iau (duw)]]
+[[de:Jupiter (Mythologie)]]
+[[es:Júpiter (mitología)]]
+[[eo:Jupitero (dio)]]
+[[eu:Jupiter (jainkoa)]]
+[[fr:Jupiter (mythologie)]]
+[[ko:유피테르]]
+[[it:Giove (mitologia)]]
+[[he:יופיטר (מיתולוגיה)]]
+[[kw:Yow (dyw)]]
+[[nl:Jupiter (mythologie)]]
+[[ja:ユピテル]]
+[[nn:Guden Jupiter]]
+[[pt:Júpiter (mitologia)]]
+[[sk:Jupiter (boh)]]
+[[sr:Јупитер (митологија)]]
+[[fi:Juppiter]]
+[[sv:Jupiter (mytologi)]]
+[[zh:朱庇特]]
