*Empty MediaWiki Message*

--- a/ედგარ_იაფე.mw
+++ b/ედგარ_იაფე.mw
@@ -1,3 +1,11 @@
-ედგარ იაფე ([[გერმ.]]: Edgar Jaffé) (* [[14 მაისი]] [[1866]], † [[29 აპრილი]] [[1921]]) - გერმანელი ეკონომისტი, პოლიტიკოსი და ფინანსთა მინისტრი. მისი მეუღლე იყო [[რიხტჰოფენი, ელზე ფონ|ელზე ფონ რიხტჰოფენი]].
+'''ედგარ იაფე''' ([[გერმ.]]: Edgar Jaffé) (* [[14 მაისი]], [[1866]], † [[29 აპრილი]], [[1921]]) - [[გერმანელები|გერმანელი]] ეკონომისტი, პოლიტიკოსი და ფინანსთა მინისტრი. მისი მეუღლე იყო [[რიხტჰოფენი, ელზე ფონ|ელზე ფონ რიხტჰოფენი]].
 
 ედგარ იაფე, თავის ყოფილ პროფესორთან [[ვებერი, მაქს|მაქს ვებერთან]] და [[ზომბარტი, ვერნერ|ვერნერ ზომბარტთან]] ერთად [[1904]] წლიდან ჟურნალ „სოციოლოგიისა და სოციალპოლიტიკის არქივის“ რედაქტორი იყო.
+
+
+
+[[კატეგორია:გერმანელები]]
+[[კატეგორია:დაბადებული  1866]]
+[[კატეგორია:გარდაცვლილი 1921]]
+
+[[de:Edgar Jaffé]]
