--- a/შუცშტაფელი.mw
+++ b/შუცშტაფელი.mw
@@ -10,6 +10,33 @@
 ==«სს»-ის ისტორია==
 ===დაარსება===
 
+[[1925]] წლის მაისში იულიუს შრეკმა, შემდგომში «სს»-ის პირველმა რაიხსფიურერმა, ჰიტლერის დავალებით «შტოსტრუპის» 8 წევრისაგან (მათ შორის: რუდოლფ ჰესი, [[გიორინგი, ჰერმან|ჰერმან გიორინგი]] და ზეპ დიტრიხი) ჩამოაყალიბა ახალი შენაერთი. ეს შენაერთი წარმოადგენდა ბირთვს, რომელზეც მოგვიანებით ორგანიზაცია «სს» ჩამოყალიბდა. 
+
+სახელი «სს» (სრულად: «დამცავი რაზმი»; [[გერმ.]]: Schutzstaffel) მაშინდელი «სა»-ს ლიდერის ჰერმან გიორინგის იდეა იყო. მან ეს სახელი ისესხა ლეგენდარული [[რიხტჰოფენი, მანფრედ ფონ (წითელი ბარონი)|“წითელი ბარონის“]] ესკადრილიის, რომელის წევრიც თვითონ იყო [[პმო|პირველ მსოფლიო ომში]], ერთ-ერთი ბადრაგ/დამცავი რაზმისაგან.
+
+ახალჩამოყალიბებული ორგანიზაციის დავალებები ჰიტლერმა მკაფიოდ ჩამოაყალიბა მისსავე [[1930]] წლის [[7 ნოემბერი|7 ნოემბრის]] „ფიურერის ბრძანებაში“: „«სს»-ს ევალება უპირველეს ყოვლისა საპოლიციო სამსახური პარტიის შიგნით“ ([[გერმ.]]: „Die Aufgabe der SS ist zunächst die Ausübung des Polizeidienstes innerhalb der Partei.“)
+
+
+===კონკურენცია «სა»-სთან===
+«[[სა]]»-ს მეთაურებმა გადაწყვიტეს «სს» მცირე, დამოკიდებულ ოორგანიზაციად დაეტოვებინათ და იმისათვის, რომ ხელი შეეშალათ «სს»-ის რიგების შევსებისათვის დააწესეს ამ ორგანიზაციისათვის მაქსიმუმი. «სს»-ის შემადგენლობას არ უნდა გადაეჭარბებინა «სა»-ს კონტინგენტის 10%-იასთვის. [[რაიხსგაუ|რაიხსგაუებში]] «სს»-ში მიღება იწარმოებდა მხოლოდ იმ შემთხვევაში თუ «სა»-ს რიგები უკვე შევსებული იქნებოდნენ. გამონაკლის წარმოადგენდა [[ბერლინი]], სადაც «სს»-ს უფლება ჰქონდა «სა»-ს რაოდენობის 20% კონტინგენტი ჰყოლოდა.
+
+ამ დირექტივით უკმაყოფილების გამო [[1927]] წელს თანამდებობიდან გადადგა «სს»-ის მეორე [[რაიხსფიურერი]] [[ბერხთოლდი, იოზეფ|იოზეფ ბერხთოლდი]]. მისი ადგილი დაიკავა 27 წლის [[ჰაიდენი, ერჰარტ|ერჰარტ ჰაიდენმა]], რომელმაც თავის მოადგილედ აქამდე [[რიომი, ერნსტ|რიომის]] პარამილიტარისტული ორგანიზაცია «რაიხსკრიგსფლაგეს“ წევრი [[ჰიმლერი, ჰაინრიხ|ჰაინრიხ ჰიმლერი]] დანიშნა. 
+
+მომდევნო წლებში ურთიერთობა ამ ორ ორგანიზაციას შორის კიდევ უფრო დაიძაბა. [[1929]] წლის [[5 იანვარი|5 იანვარს]] ჰაიდენი თანამდებობიდან გადადგა.
+
+
+===«სს» - დამოუკიდებელი ორგანიზაცია===
+«სს»-ს, სანამ «სა»-ს შემადგენლობაში იყო, «[[ნსდაპ]]»-ის შიგასაპოლიციო პუნქცია ეკისრებოდა. მას შემდეგ რაც [[1929]] ჰაინრიხ ჰიმლერი რაიხსფიურერი გახდა დაიწყო ორგანიზაციის ძირეული გარდაქმნა, რომელიც ამიერიდან «ნსდაპ»-ის საბრძოლო რაზმი უნდა ყოფილიყო: „ნაციონალ-სოციალისტური, სამხედრო ორდენი ნორდიული ნიშნების მატარებელ კაცთა, რომელთაგანაც თითოეული უპირობოდ დაემორჩილებოდა  ფიურერის ყოველ ბრძანებას“ ([[გერმ.]]: „ein nationalsozialistischer, soldatischer Orden nordisch bestimmter Männer, von denen jeder bedingungslos jeden Befehl befolgt, der vom Führer kommt“).
+
+«სს» ნელ-ნელა ელიტარულ და მასობრივ ორგანიზაციად გადაიქცა, რომლიც რიგებშიც [[1932]] წელს 52.000, ხოლო ერთი წლის შემდეგ უკვე 204.000 წევრი ირიცხებოდა. ორგანიზაციის ელიტარული ხასიათი გამოსჭვივოდა იმ რასობრივ-ბიოლოგიურ და მსოფლხედველობრივ კრიტერიუმებში, რომლბიც კანდიდატებს უნდა შეესრულებინათ «სს»-ში მოსახვედრად. «სს», როგორც „კლანური ერთობა“, ნაციონალ-სოციალისტური გაბატონებული რასის იდეოლოგიის განსახიერება და როგორც »სისხლის სიწმინდის შემნახველი“ მსოფლიოში ნორდიული რასის დომინირების ჩანასახი უნდა ყოფილიყო. 
+
+აქედან გამომდინარე საარჩევნო კრიტერიუმები არა მარტო კაცებზე ვრცელდებოდა, არამედ მათი მეუღლეებიც კი „რასობრივ სიწმინდეზე“ უნდა შეემოწმებინათ.
+
+«სს»-ის იდეოლოგია ეყრდნობოდა და ემსგავსებოდა შუა საუკუნეების რაინდთა ორდენების წყობას. რიტუალები საკრალურ ადგილებში, სიმბოლოები ([[სს-ის მკვდარი თავის ქალას ბეჭედი]]), სხვადასხვა [[რუნები|რუნების]] გამოყენება და საპატიო ხანჯალი ორგანიზაციას თითქმის რელიგიურ ხასიათს აძლევდა.
+
+ნაცისტების ხელისუფლებაში მოსვლის შემდეგ «სა», «სს» და «[[შტალჰელმი]]» პოლიციური პრივილეგიებით აღჭურვილ ორგანიზაციებად იქცნენ, რომელთაც ევალებოდათ პოლიტიკურ მოღინააღმდეგეთა დევნა. უკვე [[1933]] წლის აპრილისათვის მათ მიერ დაახ. 25.000 რეჟიმის მოწინააღმდეგე იქნა დაპატიმრებული. «სა»-მ და «სს»-მა დაიწყეს პირველი [[საკონცენტრაციო ბანაკი|საკონცენტრაციო ბანაკების]] მშენებლობა [[დახაუ (კონცბანაკი)|დახაუსა]] და ორანიენბურგში ([[ზაკსენჰაუზენი (კონცბანაკი)|ზაკსენჰაუზენი]]).
+
+
 
 [[da:SS]]
 [[de:Schutzstaffel]]
