--- a/კარლ_დენიცი.mw
+++ b/კარლ_დენიცი.mw
@@ -26,7 +26,28 @@
 
 
 ==მშვიდობიანობის დრო==
+მსოფლიო ომის შემდეგ დიონიცი [[რაიხსმარინე|რაიხსმარინეს]] რიგებში შევიდა და [[1919]] ივლისში გადაიგზავნა ბალტიის ზღვის ფლოტის შტაბში სამუშაოდ. [[1920]] წლის მარტიდან იგი მეთაურობდა სხვადასხვა წყალქვეშა ნავს. [[1921]] წლის [[1 იანვარი|1 იანვარს]] დიონიცს მიენიჭა [[კაპიტან-ლეიტენანტი|კაპიტან-ლეიტენანტის]] წოდება.
 
+[[1923]]  წლიდან იგი საზღვაო თავდაცვის განოფილებაში მუშაობდა, ვიდრე [[1927]] წელს კრეისერ „ნიმფე“-ს ნავიგაციის ოფიცრად არ დაინიშნა. [[1928]]-[[1933]] წლებში დიონიცი სხვადასხვა წყალქვეშა ნავების ფლოტილიას სარდლობდა. [[1928]] წლის [[1 ნოემბერი|1 ნოემბერს]] იგი [[კორვეტენკაპიტანი]] გახდა, ხოლო [[1933]] წლის [[1 ოქტომბერი|1 ოქტომბერს]] მას [[ფრეგატენკაპიტანი|ფრეგატენკაპიტანის]] წოდება მიენიჭა.
+
+[[1934]] წლის სექტემბერში იგი დაინიშნა კრეისერ „ემდენ“-ის კომენდანტად და [[1935]] წელს იგი სამხრეთ-აღმოსავლეთ აზიაში მრავალთვიან საწვრთნელ ექსპედიციაში გაიგზავნა. ექსპედიციიდან დაბრუნების შემდეგ ადმირალმა [[რედერი, ერიხ|ერიხ რედერმა]] დიონიცი წყალქვეშა ნავების წარმოების ხელმძღვანელად დანიშნა. იმავე წლის [[27 სექტემბერი|27 სექტემბერს]] იგი წყალქვეშა ნავების ფლოტილია „ვედინგენი“-ს სარდლად დაინიშნა და [[1 ოქტომბერი|1 ოქტომბერს]] [[საზღვაო კაპიტანი|საზღვაო კაპიტნის]] წოდება მიენიჭა. 
+
+[[1936]] წლის [[1 იანვარი|1 იანვარს]] მისი თანამდებობის სახელი შეიცვალა და ამიერიდან იგი „წყალქვეშა ნავების ფიურერად“ იწოდებოდა. [[1939]] წლის [[28 იანვარი|28 იანვარს]] დიონიცს [[კომოდორო|კომოოდორის]] სამხედრო წოდება მიენიჭა.
+
+
+* 05.10.1918-15.07.1919 - სამხედრო ტყვეობა
+* 16.07.1919-13.03.1920 - სამხედრო პორტის შტაბსოფიცერი
+* 14.03.1920-19.04.1920 - ტორპედო-ხომალლდის „V5“ მეთაური
+* 20.04.1920-14.03.1923 - ტორპედო-ხომალლდების „T 157“ და „G8“ მეთაური
+* 20.03.1923-02.11.1923 - ტორპედოებისა და ნაღმთმცოდნეობის ინსპექტორი, რეფერანტი და ადიუტანტი 
+* 03.11.1924-02.10.1927 - საზღვაო თავდაცვის განყოფილების რეფერანტი
+* 03.10.1927-16.12.1927 - სასწავლო პრაქტიკა კრეისერ „ნიმფე“-ზე
+* 17.12.1927-23.09.1928 - კრეისერ „ნიმფე“-ს ნაციგაციის ოფიცერი
+* 24.09.1928-29.09.1930 - ტორპედო-ხომალდების მე-4 ნახევარფლოტილიის შეფი
+* 30.09.1930-09.09.1934 - ჩრდილოეთ ზღვის საზღვაო შტაბის 1-ლი საადმირალო შტაბსოფიცერი
+* 29.09.1934-21.09.1935 – კრეისერ “ემდენი”-ის კომენდანტი
+* 27.09.1935-13.10.1936 - წყალქვეშა ნავების ფლოტილია „ვედინგენი“-ის შეფი
+* 01.01.1936-16.10.1939 - წყალქვეშა ნავების ფლოტის სარდალი
 
 ==მეორე მსოფლიო ომი==
 
