*Empty MediaWiki Message*

--- a/რობერტ_იაფე.mw
+++ b/რობერტ_იაფე.mw
@@ -1,3 +1,13 @@
-'''რობერტ იაფე''' ([[გერმ.]]: Robert Jaffé) (* [[24 იანვარი]] [[1894]], † [[21 თებერვალი]] [[1968]]) - გერმანელი პოლიტიკური მოღვაწე.
+'''რობერტ იაფე''' ([[გერმ.]]: Robert Jaffé) (* [[24 იანვარი]], [[1894]], † [[21 თებერვალი]], [[1968]]) - [[გერმანელები|გერმანელი]] პოლიტიკური მოღვაწე.
 
 რობერტ იაფე „[[გერმანული პარტია|გერმანული პარტიის]] წევრი იყო. [[1952]] წლის [[9 იანვარი|9 იანვარს]] [[კამპე, კარლ ფონ|კარლ ფონ კამპეს]] პენსიაში გასვლის შემდეგ იგი გერმანიის [[ბუნდესტაგი|ბუნდესტაგის]] წევრი გახდა. ლეგისლატურის პერიოდის გასვლის შემდეგ იგი ხელმეორედ აღარ აურჩევიათ პარლამენტში.
+
+
+
+[[კატეგორია:გერმანელები]]
+[[კატეგორია:გერმანელი პოლიტიკური მოღვაწეები]]
+[[კატეგორია:დაბადებული  1894]]
+[[კატეგორია:გარდაცვლილი 1968]]
+
+
+[[de:Robert Jaffé]]
